syntax = "proto3";

package rest;

option go_package = ".;rest";

// 好友事件类型
enum FriendEventType {
  ADD_FRIEND = 0;
  DELETE_FRIEND = 1;
}

// 好友事件消息
message FriendEvent {
  FriendEventType type = 1;
  int64 user_id = 2;
  int64 friend_id = 3;
  string remark = 4;
  int64 timestamp = 5;
}

// 通知好友事件请求
message NotifyFriendEventRequest {
  FriendEvent event = 1;
}

// 通知好友事件响应
message NotifyFriendEventResponse {
  bool success = 1;
  string message = 2;
}

service FriendEventService {
  rpc NotifyFriendEvent(NotifyFriendEventRequest) returns (NotifyFriendEventResponse);
}
